<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/drawer_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/optionA"
            android:icon="@drawable/ic_menu_game_options"
            android:title="@string/something" />
        <item
            android:id="@+id/optionB"
            android:icon="@drawable/ic_menu_leaderboard"
            android:title="@string/something2" />
        <item
            android:id="@+id/optionC"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/something3"/>
    </group>
</menu>