<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/guessAcuracyRangeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/guess_accuracy_range"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/guessAcuracyRangeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessAcuracyRangeTV">

        <RadioButton
            android:id="@+id/yearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_the_year"
            android:textColor="@color/black"
            android:buttonTint="@color/sage"/>

        <RadioButton
            android:id="@+id/decadeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_the_decade"
            android:textColor="@color/black"
            android:buttonTint="@color/sage"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessAcuracyRangeRadioGroup">

        <Button
            android:id="@+id/setButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>